<resources>
    <string name="app_name">event</string>
    <string name="action_settings">Settings</string>
    <string name="fhg">LogIn</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome to Event Manger</string>
    <string name="h">LogIn</string>
    <string name="gk">emailid</string>
    <string name="khh">emailid</string>
    <string name="login">LogIn</string>
    <string name="signf">Not yet registered? SignUp!</string>
    <string name="hj">LogIn</string>
    <string name="bb">password</string>
    <string name="bn">user name</string>
    <string name="ghj">Not yet registered?</string>
    <string name="vbn">Sign up</string>
    <string name="title_activity_signup">Signup</string>
    <string name="sfd">Sign Up</string>
    <string name="dfs">Name</string>
    <string name="mails">Email</string>
    <string name="pass">Password</string>
    <string name="phone">Phone No</string>
    <string name="butt">SignUp</string>
    <string name="title_activity_city">City</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="city">select city</string>
    <string name="acc">account? Register!</string>
    <string name="as">Don\'t have an account? Register!</string>
    <string name="title_activity_tab">Tab</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_venues">Venues</string>
    <string name="title_activity_catering">Catering</string>
    <string name="title_activity_flower_decoration">FlowerDecoration</string>
    <string name="title_activity_purjari">Purjari</string>
    <string name="title_activity_managers">Managers</string>
    <string name="venues">Venues</string>
    <string name="title_activity_priests">Priests</string>
    <string name="f">Book</string>
    <string name="ib">image</string>
    <string name="title_activity_upload">upload</string>

    <string-array name="planets_array">
        <item>NONE SELECT</item>
        <item>Priests</item>
        <item>Stage Decor</item>
        <item>Venues</item>
        <item>Catering</item>
        <item>Managers</item>

    </string-array>
    <string name="title_activity_aboutus">Aboutus</string>
</resources>
